--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Unity WebView</title>
   </head>
   <body>
-    <h1>Hello Unity WebView!</h1>
+    <h1>Hello Web World</h1>
   </body>
 </html>
