--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Unity WebView</title>
   </head>
   <body>
-    <h1>Hello Web World</h1>
+    <h1>Hello Unity WebView!</h1>
+    <hr/>
+    <p><a href="https://google.com">https://google.com</a> (for testing go/back buttons)</p>
+    <p><img src="sample.jpg"/> (local image)</p>
+    <hr/>
+    <p><a href="javascript:void(0)" onclick="Unity.call('anchor');">[Send Message!]</a></p>
+    <form method="get" action="form">
+      <input id="input1" type="text" value="hoge" name="msg"/>
+      <input type="submit" value="Send Message!" onclick="Unity.call('form?msg=' + document.getElementById('input1').value); return false;"/>
+    </form>
   </body>
 </html>
