--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
-<!DOCTYPE html>
+<!--
+
 <html>
   <head>
-    <title>Page Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Unity WebView</title>
   </head>
-
   <body>
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
+    <h1>Hello Unity WebView!</h1>
+    <hr/>
+    <p><a href="https://google.com">https://google.com</a> (for testing go/back buttons)</p>
+    <p><img src="sample.jpg"/> (local image)</p>
+    <hr/>
+    <p><a href="javascript:void(0)" onclick="Unity.call('anchor');">[Send Message!]</a></p>
+    <form method="get" action="form">
+      <input id="input1" type="text" value="hoge" name="msg"/>
+      <input type="submit" value="Send Message!" onclick="Unity.call('form?msg=' + document.getElementById('input1').value); return false;"/>
+    </form>
+  </body>
+</html>
+
+-->
+
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Unity WebView</title>
+  </head>
+  <body>
+    <h1>Hello Unity WebView</h1>
+    <hr/>
+    <form method="get" action="form">
+      <input id="input1" type="text" value="" name="msg"/>
+      <input type="submit" value="Send Message!" onclick="Unity.call(document.getElementById('input1').value); return false;"/>
+    </form>
   </body>
 </html>
