--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <hr/>
     <form method="get" action="form">
       <input id="input1" type="text" value="" name="msg"/>
-      <input type="submit" value="Send Message!" onclick="Unity.call(document.getElementById('input1').value); return false;"/>
+      <input id="input2" type="text" value="" name="msg"/>
+      <input type="submit" value="Send" onclick="Unity.call(document.getElementById('input1').value + document.getElementById('input2').value); return false;"/>
     </form>
   </body>
 </html>
