--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p><a href="javascript:void(0)" onclick="Unity.call('anchor');">[Send Message!]</a></p>
     <form method="get" action="form">
       <input id="input1" type="text" value="hoge" name="msg"/>
-      <input type="submit" value="Send Message!" onclick="Unity.call('form?msg=' + document.getElementById('input1').value); return false;"/>
+      <input type="submit" value="Send Message!" onclick="Unity.call('form?msg=' + ' ' + document.getElementById('input1').value); return false;"/>
     </form>
   </body>
 </html>
