--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <form method="get" action="form">
       <input id="input1" type="text" value="" name="msg"/>
       <input id="input2" type="text" value="" name="msg"/>
-      <input type="submit" value="Send" onclick="Unity.call(document.getElementById('input1').value + document.getElementById('input2').value); return false;"/>
+      <input type="submit" value="Send" onclick="Unity.call(document.getElementById('input1').value + ' ' + document.getElementById('input2').value); return false;"/>
     </form>
   </body>
 </html>
