--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>Unity WebView</title>
   </head>
   <body>
-    <h1>Hello Unity WebView</h1>
+    <h1>Hello Unity WebView 2</h1>
     <hr/>
     <form method="get" action="form">
       <label for="input1">Username:</label><br>
