--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <input id="input1" type="text" value="" name="msg"/><br><br>
       <label for="input2">Password:</label><br>
       <input id="input2" type="text" value="" name="msg"/><br><br>
-      <input type="submit" value="Send" onclick="Unity.call(document.getElementById('input1').value + ',' + document.getElementById('input2').value); return false;"/>
+      <input type="button" value="Send" onclick="Unity.call(document.getElementById('input1').value + ',' + document.getElementById('input2').value); return false;"/>
     </form>
   </body>
 </html>
